<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstProject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="btn1">1</string>
    <string name="web">WEB</string>
    <string name="title_activity_two">TwoActivity</string>
    <string name="etTop">ENTER TEXT</string>
    <string name="press">GO</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="scheme">http://</string>
    <string name="ok">GO</string>
    <string name="resultLabelDescription">Your full name: </string>
    <string name="countries"> Countries </string>
    <string name="title_activity_countries">CountriesActivity</string>
    <string name="number_list">Countries</string>
    <string name="empty">Empty</string>
    <string name="simpleAdapter">simpleAdapter</string>
    <string name="title_activity_simpladapter">Simple_Adapter</string>
    <string name="etFrAdVal">Введите процент от 0 до 100</string>
    <string name="title_activity_test"> Long List </string>
    <string name="hello_world">Hello world!</string>
    <string name="longList">Long List</string>
    <string name="title_activity_a">a</string>
    <string name="menu_setting">Setting</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="locales">Locales</string>
    <string name="title_activity_locales">LocalesActivity</string>
    <string name="inf_on_country">Image with any Text</string>
    <string name="select_country">Select the country</string>
    <string name="display_locales_activity">DisplayLocalesActivity</string>
    <string name="wait">Wait please</string>
    <string name="lorem_ipsum">        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        In ligula diam, vulputate non nisi a, rutrum convallis nibh.
        Mauris a sem et metus scelerisque interdum. Nam vel magna odio.
        Proin porttitor imperdiet sem et tincidunt.
        Nulla massa ligula, bibendum at consectetur in, euismod id nibh.
        Fusce id massa tempus enim venenatis sodales.
        Sed eu mauris sed nibh tempor hendrerit.
        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="add">ADD</string>
    <string name="del">DELETE</string>
    <string name="title_activity_my_tab">MyTabActivity</string>
    <string name="title_activity_test_view">TestView</string>
    <string name="spinner1">Spinner1</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">DELETE</string>
    <string name="menu_search">Search</string>

    <string-array name="spinner1">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>For</item>
        <item>Five</item>
    </string-array>

    <string name="title_activity_http">HttpActivity</string>
    <string name="http_fragment">HTTPFragment</string>
    <string name="http_activity">HTTP_ACTIVITY</string>

</resources>
